test/core/errors/templates_error/zs/templated_template_parameter_error.zs
package templated_template_parameter_error;

struct TestStruct<T>
{
    T<uint32> value;
};

struct TemplatedTemplateParameterError
{
    TestStruct<string> test;
};
